--- a/joke.css
+++ b/joke.css
@@ -1,3 +1,19 @@
 body{
     background-image: url("images/bg.jpg");
+     background-repeat: no-repeat;
+     background-size: cover;
+}
+
+.container{
+    /*makes it so the items will be in a row*/
+    display:flex;
+}
+
+.item{
+    /*flex:1 tells that all items should share the space equally*/
+    flex:1;
+    text-align:center;
+    color:white;
+    /*play around with this shadow!!!!!!!!*/
+    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px red;
 }
