--- a/joke.css
+++ b/joke.css
@@ -17,3 +17,9 @@ body{
     /*play around with this shadow!!!!!!!!*/
     text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px red;
 }
+
+h3{
+    text-align:center;
+    color:white;
+    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px red;
+}
