--- a/joke.css
+++ b/joke.css
@@ -13,14 +13,19 @@ body{
     /*flex:1 tells that all items should share the space equally*/
     flex:1;
     text-align:center;
-    color:white;
-    /*play around with this shadow!!!!!!!!*/
-    text-shadow: 1px 1px 20px black, 0 0 25px blue, 0 0 5px red;
 }
 
 h3{
     text-align:center;
     color:white;
     text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px red;
+}
+
+h4{
+    background-color:white;
+    color:black;
+    width:50%;
+    margin-left:70px;
+    font-size:20px;
 }
 
