--- a/joke.css
+++ b/joke.css
@@ -61,4 +61,26 @@ h1{
     from {width:0%};
 }
 
+.button{
+    padding:10px;
+    font-size:40px;
+    background-color:white;
+    color:black;
+    animation: fade 13s;
+    margin-left:45%;
+    text-decoration:none;
+}
+
+@keyframes fade{
+    0%{
+        opacity:0;
+    }
+    50%{
+        opacity:0;
+    }
+    100%{
+        opacity:1;
+    }
+}
+
 
