--- a/joke.css
+++ b/joke.css
@@ -108,3 +108,20 @@ p{
     color:black;
 }
 
+input{
+    display:block;
+    margin:0 auto;
+    padding:20px;
+    font-size:20px;
+}
+button{
+    margin-top:20px;
+    display:block;
+    justify-content: center;
+    padding:10px;
+    font-size:20px;
+    background-color:white;
+    color:black;
+    margin-left:47%;
+    font-family:fantasy;
+}
