--- a/joke.css
+++ b/joke.css
@@ -145,9 +145,13 @@ button{
     display:grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     padding:10px;
+    border:3px solid black;
+    background-color:skyblue;
 }
 
-.grid h3{
+
+.grid h3, button{
     width: 60%;
     margin-left:20%;
 }
+
