--- a/joke.css
+++ b/joke.css
@@ -127,14 +127,14 @@ button{
 }
 
 
-#manyJokes{
+#manyJokes, #programming, #knock-knock, #general, #dad{
     color:black;
     padding:10px;
     margin-top:10px;
     text-align:center;
     width:60%;
     margin-left:20%;
-    font-size:30px;
+    font-size:20px;
 }
 
 .random{
